<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome"
        android:textSize="24sp"
        android:layout_marginTop="15dp"
        android:textColor="@color/white"
        />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genero"
        android:textSize="24sp"
        android:layout_marginTop="15dp"
        android:textColor="@color/white"/>

    <Spinner
        android:id="@+id/editSpinnerGenre"
        android:entries="@array/genres"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:textSize="24sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:textSize="24sp"
        android:layout_marginTop="15dp"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/editTextScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:inputType="number"
        android:textColor="@color/white"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/url_da_capa_do_filme"
        android:textSize="24sp"
        android:layout_marginTop="15dp"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/editTextCover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:maxLines="3"
        android:textColor="@color/white"
        />

</LinearLayout>