<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="5dp"
        app:cardElevation="8dp"

        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/secondary">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgIv"
                    android:layout_width="65dp"
                    android:layout_height="98dp" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="20dp">
                    <TextView
                        android:id="@+id/nameTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textSize="24sp"
                        android:textColor="@color/white"
                        />
                    <TextView
                        android:id="@+id/genreTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/genre"
                        android:textColor="@color/white"
                        />
                    <TextView
                        android:id="@+id/scoreTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/score"
                        android:textColor="@color/white"
                        />
                </LinearLayout>


            </LinearLayout>

            <ImageView
                android:id="@+id/fav_icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>